--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   				<a href="regoster.html">Register Now</a>
   		</section>
 
-  		<section>
+  		<section class="container">
   				<section>
   						 <a href="speakers.html">
   						   <h5>Speakers</h5>
@@ -52,7 +52,7 @@
   						<p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
   				</section>
 
-  		<footer>
+  		<footer class="container">
   			<nav>
     		      <a href="index.html">Home</a>
    				    <a href="speakers.html">Speakers</a>
