--- a/register.html
+++ b/register.html
@@ -12,13 +12,15 @@
           </h1>
   				<h1> Styles Conference</h1>
   				<h3>Augest 24&ndash;26th &mdash; Chicago, IL</h3>
-  				<nav>
-  					<a href="index.html">Home</a>
-  					<a href="speakers.html">Speakers</a>
-  					<a href="schedue.html">Schedule</a>
-  					<a href="venue.html">Venue</a>
-  					<a href="register.html">Register</a>
-  				</nav>
+  				  <nav class="nav primary-nav">
+        <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></il><!--
+        --><li><a href="schedule.html">Schedule</a></li>
+        <li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+      </ul>
+      </nav>
 
   		</header>
 
