--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
       Schedule
 
       --><section class="teaser col-1-3">
+        <h5>Schedule</h5>
+        <h3>Three Inspiring Days</h3>
         <a href="schedule.html">
-          <h5>Schedule</h5>
-          <h3>Three Inspiring Days</h3>
+          <a href="schedule.html">
+          <img src="assets/images/home/schedule.jpg"
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
       </section><!--
@@ -73,9 +75,10 @@
       Venue
 
       --><section class="teaser col-1-3">
+        <h5>Venue</h5>
+        <h3>The Chicago Theatre</h3>
         <a href="venue.html">
-          <h5>Venue</h5>
-          <h3>The Chicago Theatre</h3>
+        <img src="assets/images/home/venue.jpg"
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
       </section>
