--- a/schedule.html
+++ b/schedule.html
@@ -12,13 +12,17 @@
           </h1>
   				<h1> Styles Conference</h1>
   				<h3>Augest 24&ndash;26th &mdash; Chicago, IL</h3>
-  				<nav>
-  					<a href="index.html">Home</a>
-  					<a href="speakers.html">Speakers</a>
-  					<a href="schedue.html">Schedule</a>
-  					<a href="venue.html">Venue</a>
-  					<a href="register.html">Register</a>
-  				</nav>
+  		      <nav class="nav primary-nav">
+        <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></il><!--
+        --><li><a href="schedule.html">Schedule</a></li>
+        <li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+      </ul>
+      </nav>
+
+    </header>
 
   		</header>
 
@@ -28,15 +32,21 @@
         <p> The&#8217;conference opens with amazing workshops and continues with two days of incredible talks and keynotes, all of which are facilitated by&#8217;industry-leading experts.
         </section>
 
-  		<footer class="primary-footer container group">
-  			<nav>
-    		      <a href="index.html">Home</a>
-   				    <a href="speakers.html">Speakers</a>
-   				    <a href="schedule.html">Schedule</a>
-   				    <a href="venue.html">Venue</a>
-   				    <a href="register.html">Register</a>
-  			</nav>
-  		</footer>
+   <footer class="primary-footer container group">
+
+      <small>&copy; Styles Conference</small>
+
+      <nav class="nav">
+        <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></li><!--
+        --><li><a href="schedule.html">Schedule</a></li><!--
+        --><li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+      </ul>
+      </nav>
+
+    </footer>
 
 
   </body>
