--- a/venue.html
+++ b/venue.html
@@ -12,7 +12,7 @@
           </h1>
   				<h1> Styles Conference</h1>
   				<h3>Augest 24&ndash;26th &mdash; Chicago, IL</h3>
-  				  <nav class="nav primary-nav">
+  	      <nav class="nav primary-nav">
         <ul>
         <li><a href="index.html">Home</a></li><!--
         --><li><a href="speakers.html">Speakers</a></il><!--
@@ -21,7 +21,8 @@
         --><li><a href="register.html">Register</a></li>
       </ul>
       </nav>
-  				</nav>
+
+    </header>
 
   		</header>
 
@@ -46,19 +47,37 @@
     --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606"></iframe>
 
   </section>
- 
+
+  <section class="venue-hotel">
+
+    <div class="col-1-3">
+      <h2>Hotel Chicago</h2>
+      <p>333 N Dearborn St <br> Chicago, IL 60654</p>
+      <p><a href="https://thehotelchicago.com/">thehotelchicago.com</a> <br> (312)245-0333</p>
+      </div><!--
+
+    --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2cb1da049173%3A0xa5c91d255a775f0b!2sHotel+Sax+Chicago%2C+North+Dearborn+Street%2C+Chicago%2C+IL!5e0!3m2!1sen!2sus!4v1388702493978"></iframe>
 
 
-  		<footer class="primary-footer container group">
-  			<nav>
-    		      <a href="index.html">Home</a>
-   				    <a href="speakers.html">Speakers</a>
-   				    <a href="schedule.html">Schedule</a>
-   				    <a href="venue.html">Venue</a>
-   				    <a href="register.html">Register</a>
-  			</nav>
-  		</footer>
+  </section>
+  
 
+
+ <footer class="primary-footer container group">
+
+      <small>&copy; Styles Conference</small>
+
+      <nav class="nav">
+        <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></li><!--
+        --><li><a href="schedule.html">Schedule</a></li><!--
+        --><li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+      </ul>
+      </nav>
+
+    </footer>
 
   </body>
 </html>
